[package]
name = "NodePad-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = {version = "0.33.0", default-features = false, features = [ "accesskit", "default_fonts", "web_screen_reader", "wgpu" ] }
egui-async = "0.2.5"
image = "0.25.9"
log = { version = "0.4.28", features = [ "release_max_level_warn" ] }
rfd = "0.16.0"

[target.'cfg(target_os = "linux")'.dependencies]
wgpu = { version = "27.0.1", default-features = false, features = ["vulkan"] }

[target.'cfg(target_os = "windows")'.dependencies]
wgpu = { version = "27.0.1", default-features = false, features = ["dx12"] }

[target.'cfg(target_os = "macos")'.dependencies]
wgpu = { version = "27.0.1", default-features = false, features = ["metal"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.70"  
console_log = "1.0.0"
wgpu = { version = "27.0.1", default-features = false, features = ["webgpu", "webgl"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
simple_logger = "5.1.0"
